ADD org profile section + terms read more + fixes

--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -6,9 +6,15 @@
 
 
         <div class="w-48 h-fit text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
-            <button (click)="getProfile()" id="general-button" aria-current="true" class="block w-full px-4 py-2 text-white bg-primary-100 border-b border-gray-200 rounded-t-lg cursor-pointer dark:border-gray-600 hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
-                {{ 'PROFILE._general' | translate }}
-            </button>
+            @if(loggedAsUser){
+                <button (click)="getProfile()" id="general-button" aria-current="true" class="block w-full px-4 py-2 text-white bg-primary-100 border-b border-gray-200 rounded-t-lg cursor-pointer dark:border-gray-600 hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
+                    {{ 'PROFILE._general' | translate }}
+                </button>
+            } @else {
+                <button (click)="getOrgProfile()" id="general-button" aria-current="true" class="block w-full px-4 py-2 text-white bg-primary-100 border-b border-gray-200 rounded-t-lg cursor-pointer dark:border-gray-600 hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
+                    {{ 'PROFILE._general' | translate }}
+                </button>
+            }
             <button (click)="getBilling()" id="bill-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
                 {{ 'PROFILE._bill' | translate }}
             </button>
@@ -19,6 +25,9 @@
         <div>
         @if(show_profile){
             <user-info></user-info>
+        }
+        @if(show_org_profile){
+            <org-info></org-info>
         }
         @if(show_orders){
             <order-info></order-info>
