--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -37,7 +37,7 @@
             <markdown class="pt-2 line-clamp-2 max-h-19 dark:text-gray-200" [data]="productOff?.description"></markdown>
             <div class="grid grid-cols-2">
                 <div class="h-fit pt-2 dark:text-gray-300">V: {{productOff?.version || 'latest'}}</div>
-                <div class="flex items-center justify-end">
+                <!--<div class="flex items-center justify-end">
                     <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
                       <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
                     </svg>
@@ -54,7 +54,7 @@
                       <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
                     </svg>
                     <span class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ml-3">5.0</span>
-                </div>
+                </div>-->
             </div>
             <div>
                 @for (cat of categories; track cat.id) {
@@ -348,8 +348,14 @@
                                     <fa-icon [icon]="faScaleBalanced" class="fa-2xl text-primary-100 align-middle"></fa-icon>
                                 </div>
                             </div>
-                            
-                            <markdown class="h-2/4 text-lg font-normal text-gray-700 dark:text-gray-200 mb-4" [data]="productOff?.productOfferingTerm?.at(0)?.description"></markdown>
+                            <div id="terms" class="line-clamp-5">
+                                <markdown class="text-lg font-normal text-gray-700 dark:text-gray-200 mb-4" [data]="productOff?.productOfferingTerm?.at(0)?.description"></markdown>
+                            </div>
+                            @if(showTermsMore==false){
+                                <button class="mt-4 text-blue-500 focus:outline-none" (click)="toggleTermsReadMore()">Read more</button>
+                            } @else {
+                                <button class="mt-4 text-blue-500 focus:outline-none" (click)="toggleTermsReadMore()">Read less</button>
+                            }
                         </div>
                     </div>
                 }
