--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="w-full">
     <!-- Breadcrumb -->
     <div class="pb-4">
         <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-secondary-50 dark:bg-secondary-100 dark:border-gray-800 dark:text-white" aria-label="Breadcrumb">
@@ -27,7 +27,7 @@
     <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'UPDATE_OFFER._update' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
     <div class="md:grid md:grid-cols-20/80">
-        <div class="flex sm:flex-row md:flex-col md:mr-4 w-full md:w-fit overflow-x-auto">
+        <div class="flex sm:flex-row md:flex-col md:mr-4 overflow-x-auto max-w-[calc(100vw-5rem)]">
             <h2 class="text-xl hidden md:block font-bold text-black mb-4 dark:text-white">{{ 'UPDATE_OFFER._steps' | translate }}</h2>
             <button id="general-info" (click)="toggleGeneral()"
             class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-primary-100 dark:text-primary-50 justify-items-center md:justify-items-start">
