--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -26,11 +26,11 @@
   <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-8 rounded-lg">
     <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'CREATE_OFFER._new' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
-    <div class="md:grid md:grid-cols-20/80">
+    <div class="md:grid md:grid-cols-25/75 xl:grid-cols-20/80">
         <div class="flex sm:flex-row md:flex-col md:mr-4 overflow-x-auto max-w-[calc(100vw-5rem)]">
             <h2 class="text-xl hidden md:block font-bold text-black mb-4 dark:text-white">{{ 'CREATE_OFFER._steps' | translate }}</h2>
             <button id="general-info" (click)="toggleGeneral()" [disabled]="!generalDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-primary-100 dark:text-primary-50 justify-items-center md:justify-items-start">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-primary-100 dark:text-primary-50 justify-items-center md:justify-items-start">
                 <span id="general-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-primary-100 dark:border-primary-50 rounded-full shrink-0">
                     1
                 </span>
@@ -41,7 +41,7 @@
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="bundle" (click)="toggleBundle()" [disabled]="!bundleDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="bundle-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     2
                 </span>
@@ -52,7 +52,7 @@
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="prodspec" (click)="toggleProdSpec()" [disabled]="!prodSpecDone"
-                class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+                class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="prodspec-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     3
                 </span>
@@ -63,7 +63,7 @@
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="catalog" (click)="toggleCatalogs()" [disabled]="!catalogsDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="catalog-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     4
                 </span>
@@ -74,7 +74,7 @@
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="category" (click)="toggleCategories()" [disabled]="!categoriesDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="category-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     5
                 </span>
@@ -85,7 +85,7 @@
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="license" (click)="toggleLicense()" [disabled]="!licenseDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="license-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     6
                 </span>
@@ -106,7 +106,7 @@
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">-->
             <button id="price" (click)="togglePrice()" [disabled]="!priceDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="price-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     7
                 </span>
@@ -117,7 +117,7 @@
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="summary" [disabled]="true"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="summary-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     8
                 </span>
