ADD users role check on routing + fix create billing address when logged as org

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -127,7 +127,7 @@
               <button (click)="goTo('/my-offerings')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faHandHoldingBox" class="mr-2"></fa-icon>{{ 'HEADER._offerings' | translate }}</button>
             </li>
           }
-          @if(isAdmin){
+          @if(isAdmin && loggedAsOrg == false){
             <li>
               <button (click)="goTo('/admin')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faCogs" class="mr-2"></fa-icon>{{ 'HEADER._admin' | translate }}</button>
             </li>
