ADD search bar's input as keyword in get products query

--- a/src/app/pages/search-catalog/search-catalog.component.html
+++ b/src/app/pages/search-catalog/search-catalog.component.html
@@ -46,7 +46,7 @@
           </svg>
           Categories
         </button>
-        @if(searchEnabled){
+        <!--@if(searchEnabled){
           <form class="mx-5 w-full">
             <div class="flex">
               <div class="relative w-full">
@@ -60,7 +60,7 @@
               </div>
             </div>
           </form>
-        }
+        }-->
       </section>
       <div class="md:pl-5 grid grid-cols-1 place-items-center lg:grid-cols-2 xl:grid-cols-3 h-full">
         @for (prod of products; track prod.id) {
