--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -319,11 +319,16 @@
             <div class="flex flex-wrap -mx-4">
                 @for (att of attatchments; track att.id) {
                     <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">                
-                        <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full">
-                            <h3 class="text-2xl font-bold mb-4 dark:text-white">{{att.name}}</h3>
-                            <a class="mb-2 font-normal pl-4 text-primary-100 text-wrap break-all" target="_blank" href="{{att.url}}">
+                        <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full grid grid-cols-80/20 pb-4 h-1/4">
+                            <div class="flex justify-start">
+                                <h3 class="text-2xl font-bold mb-4 dark:text-white">{{att.name}}</h3>
+                            </div>                            
+                            <!--<a class="mb-2 font-normal pl-4 text-primary-100 text-wrap break-all" target="_blank" href="{{att.url}}">
                                 {{att.url}}
-                            </a>
+                            </a>-->
+                            <div class="flex justify-end">
+                                <fa-icon [icon]="faDownload" (click)="goToLink(att.url)" class="fa-xl cursor-pointer text-primary-100 align-middle"></fa-icon>
+                            </div>
                         </div>
                     </div>
                 } @empty {
