--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -56,7 +56,7 @@
         </div>
       </div>-->
 
-      <div class="flex items-center justify-center rounded-lg">
+      <div class="flex items-center justify-center rounded-lg mt-4">
 
         <button (click)="toggleDetailsModal();$event.stopPropagation();"  type="button" class="flex items-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-100 dark:hover:bg-primary-50 dark:focus:ring-primary-100 mr-1">
           <svg class="w-[18px] h-[18px] text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 14">
