--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -26,18 +26,20 @@
     <!-- End Breadcrumb -->
 
     <!-- START HEADER CARD -->
-    <div class="w-full h-fit lg:h-[330px] mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border lg:grid lg:grid-cols-60/40">
-        <div class="flex lg:hidden overflow-hidden justify-center items-center bg-white rounded-t-lg h-[318px]">
-            <img class="rounded-r-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
+    <div class="w-full lg:h-fit mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border lg:grid lg:grid-cols-60/40">
+        <div class="flex lg:hidden overflow-hidden justify-center items-center bg-white rounded-t-lg w-full">
+            <img class="rounded-t-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
         </div>
-        <div class="grid grid-rows-5 p-4 md:p-8 h-full">
-            <div class="mt-2">
+        <div class="grid grid-rows-auto p-4 md:p-8 h-fit">
+            <div class="mt-2 h-fit">
                 <!--<a href="#">-->
                 <h5 class="md:text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-white">{{productOff?.name}}</h5>
                 <!--</a>-->
             </div>
-            <markdown class="pt-2 line-clamp-2 max-h-19 dark:text-gray-200" [data]="productOff?.description"></markdown>
-            <div class="grid grid-cols-2">
+            <div class="pt-2 line-clamp-5 h-fit">
+                <markdown class="dark:text-gray-200" [data]="productOff?.description"></markdown>
+            </div>            
+            <div class="grid grid-cols-2 h-fit">
                 <div class="h-fit pt-2 dark:text-gray-300">V: {{productOff?.version || 'latest'}}</div>
                 <!--<div class="flex items-center justify-end">
                     <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
@@ -58,7 +60,7 @@
                     <span class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ml-3">5.0</span>
                 </div>-->
             </div>
-            <div>
+            <div class="h-fit">
                 @for (cat of categories; track cat.id) {
                     <bae-badge class="mr-2" [category]=cat></bae-badge>
                 }
@@ -75,8 +77,13 @@
                 </a>
             </div>
         </div>
-        <div class="hidden lg:flex overflow-hidden justify-center items-center bg-white rounded-r-lg h-[328px]">
-            <img class="rounded-r-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
+        <div class="hidden lg:block overflow-hidden rounded-r-lg">
+            <div class="hidden lg:flex relative justify-center items-center w-full h-full">
+                <!-- Imagen de fondo difuminada -->
+                <div class="object-contain overflow-hidden absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage()}});filter: blur(20px);"></div>
+                <!-- Imagen superior -->
+                <img class="object-contain h-5/6 w-5/6 z-10 p-8" src="{{getProductImage()}}" alt="Descripción de la imagen">
+            </div>
         </div>
     </div>
 <!-- END HEADER CARD -->
