--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -64,6 +64,7 @@
                 @for (cat of categories; track cat.id) {
                     <bae-badge class="mr-2" [category]=cat></bae-badge>
                 }
+
                 <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2"
                     [ngClass]="complianceLevel == 1 ? 'bg-red-200 text-red-700' : complianceLevel == 2 ? 'bg-yellow-200 text-yellow-700' : 'bg-green-200 text-green-700'">
                     <fa-icon [icon]="faAtom" class="mr-2" [ngClass]="complianceLevel == 1 ? 'text-red-700' : complianceLevel == 2 ? 'text-yellow-700' : 'text-green-700'"></fa-icon>
@@ -82,7 +83,7 @@
                 <!-- Imagen de fondo difuminada -->
                 <div class="object-contain overflow-hidden absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage()}});filter: blur(20px);"></div>
                 <!-- Imagen superior -->
-                <img class="object-contain h-5/6 w-5/6 z-10 p-8" src="{{getProductImage()}}" alt="Descripción de la imagen">
+                <img class="object-contain h-5/6 w-5/6 max-h-[350px] z-10 p-8" src="{{getProductImage()}}" alt="Descripción de la imagen">
             </div>
         </div>
     </div>
@@ -236,6 +237,16 @@
                                 </div>
                             }
                         }
+                        @if(productOff?.productOfferingPrice?.length==0){
+                            <div class="inline-flex items-center justify-center w-full">
+                                <div class="max-w-sm bg-white border border-gray-200  rounded-lg shadow w-full">
+                                    <div class="bg-blue-500 rounded-t-lg w-full">
+                                        <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{ 'SHOPPING_CART._free' | translate }}</h5>
+                                    </div>
+                                    <p class="flex justify-center mb-2 font-normal text-gray-700">{{ 'SHOPPING_CART._free_desc' | translate }}</p>
+                                </div>
+                            </div>
+                        }
                     </div>   
                 } @else {
                     <div class="grid grid-flow-row gap-4 lg:grid-cols-3 lg:auto-cols-auto justify-items-center p-2">
@@ -268,15 +279,15 @@
                                 </div>
                             }
                         }
+                        @if(productOff?.productOfferingPrice?.length==0){
+                            <div class="max-w-sm bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
+                                <div class="bg-blue-500 rounded-t-lg w-full">
+                                    <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{ 'SHOPPING_CART._free' | translate }}</h5>
+                                </div>
+                                <p class="flex justify-center mb-2 font-normal text-gray-700 dark:text-white">{{ 'SHOPPING_CART._free_desc' | translate }}</p>
+                            </div> 
+                        }
                     </div>
-                }
-                @if(productOff?.productOfferingPrice?.length==0){
-                    <div class="max-w-sm bg-white border border-gray-200 dark:bg-secondary-200 dark:border-gray-800 rounded-lg shadow w-full">
-                        <div class="bg-blue-500 rounded-t-lg w-full">
-                            <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{ 'SHOPPING_CART._free' | translate }}</h5>
-                        </div>
-                        <p class="flex justify-center mb-2 font-normal text-gray-700 dark:text-white">{{ 'SHOPPING_CART._free_desc' | translate }}</p>
-                    </div> 
                 }
             }
         </div>
