--- a/src/app/shared/cart-card/cart-card.component.html
+++ b/src/app/shared/cart-card/cart-card.component.html
@@ -81,6 +81,19 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                               </div>
                             </label>
                           </div>
+                        } @else if (price.priceType === 'custom') {
+                            <div class="flex items-center">
+                                <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer items-center w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <label [for]="'price-radio-'+idx" class="inline-flex items-center justify-center w-full p-5 peer-checked:border  rounded-lg cursor-pointer peer-checked:border-primary-100">
+    
+                                    <div class="mx-auto bg-white border border-gray-200 rounded-lg shadow w-full p-4">
+                                        <div class="flex justify-start mb-2">
+                                            <h2 class="text-gray-900 text-3xl font-extrabold mb-2">{{price.name}}</h2>
+                                        </div>
+                                        <markdown class="w-full" [data]="price?.description"></markdown>
+                                    </div>
+                                </label>
+                            </div>
                         } @else {
                           <div class="flex items-center">
                             <input checked [id]="'price-radio-'+idx" (change)="onPriceChange(price)" type="radio" value="" name="price-radio" class="hidden peer w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
@@ -99,16 +112,14 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                       }
                       </div>                    
                   } @else {
-                      <div class="flex justify-center w-full m-4">
-                          <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50 dark:bg-secondary-200 dark:text-primary-50" role="alert">
-                              <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                              <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
-                              </svg>
-                              <div>
-                                  {{ 'CARD._no_prices' | translate }}
-                              </div>
-                          </div>
-                      </div> 
+                    <div class="inline-flex items-center justify-center w-full">
+                        <div class="max-w-sm bg-white border border-gray-200  rounded-lg shadow w-full">
+                            <div class="bg-blue-500 rounded-t-lg w-full">
+                                <h5 class="flex justify-center mb-2 p-6 text-2xl font-bold tracking-tight text-gray-900">{{ 'SHOPPING_CART._free' | translate }}</h5>
+                            </div>
+                            <p class="flex justify-center mb-2 font-normal text-gray-700">{{ 'SHOPPING_CART._free_desc' | translate }}</p>
+                        </div>
+                    </div>
                   }
                     <div class="flex justify-end">
                         <button (click)="clickShowTerms(false)" type="button" 
@@ -147,7 +158,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                       }                      
                   } @else {
                       <div class="flex justify-center w-full m-4">
-                          <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50 dark:bg-secondary-200 dark:text-primary-50" role="alert">
+                          <div class="flex w-2/3 items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50" role="alert">
                               <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                               <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
                               </svg>
@@ -168,7 +179,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                       </div>
                   </div>
                   <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="terms">
-                  @if(check_terms){                    
+                  @if(check_terms == true){                 
                       <h5 class="text-3xl font-semibold tracking-tight text-primary-100">{{ 'CARD._terms' | translate }}:</h5>
                       @for (term of productOff?.productOfferingTerm; track term.name){
                       <p class="text-gray-900 text-bold"> <span class="font-bold">{{term.name}}:</span></p>
@@ -191,7 +202,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                       </div>                    
                   } @else {
                       <div class="flex justify-center w-full m-4">
-                          <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50 dark:bg-secondary-200 dark:text-primary-50" role="alert">
+                          <div class="flex w-2/3 items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50" role="alert">
                               <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                               <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
                               </svg>
